[SYNCOPE-1968] Initial support for CAS tenants (#1394)